# python-module-tasks

./: README.md  pyproject.toml
src/python_module_tasks/advanced/api/: main.py  models.py
src/python_module_tasks/advanced/api/routes/: admin.py  customer.py
src/python_module_tasks/advanced/client/: admin.py  cli.py  customer.py
src/python_module_tasks/task1/1/: main.py
src/python_module_tasks/task1/2/: main.py
src/python_module_tasks/task1/3/: main.py
src/python_module_tasks/task1/4/: main.py
src/python_module_tasks/task1/5/: main.py
src/python_module_tasks/task2/: emails.txt  main.py  questions.json  survey.py
tests/: conftest.py  test_api.py  test_cli.py
