[project]
name = "python-module-tasks"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "xDepcio", email = "olek.drwal@gmail.com"},
]
dependencies = [
    "py-cpuinfo>=9.0.0",
    "psutil>=6.1.0",
    "requests>=2.32.3",
    "python-dotenv>=1.0.1",
    "pydantic>=2.9.2",
    "fastapi>=0.115.4",
    "typer>=0.12.5",
]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
